--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "@types/node-cron": "^3.0.11",
     "@whiskeysockets/baileys": "^6.6.0",
     "bcrypt": "^5.1.1",
     "bull": "^4.12.0",
@@ -43,6 +44,7 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
     "openai": "^4.24.1",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
