--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "@prisma/client": "^5.7.0",
     "@types/node-cron": "^3.0.11",
-    "@whiskeysockets/baileys": "^6.6.0",
+    "@whiskeysockets/baileys": "^6.5.0",
     "bcrypt": "^5.1.1",
     "bull": "^4.12.0",
     "cors": "^2.8.5",
@@ -49,6 +49,7 @@
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
     "qrcode": "^1.5.3",
+    "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
